--- a/bubble.css
+++ b/bubble.css
@@ -8,23 +8,23 @@ text.parent {
 }
 
 circle {
-  fill: #ccc;
-  stroke: #999;
+/*  fill: #ccc;
+  stroke: #999;*/
   pointer-events: all;
 }
 
 circle.parent {
-  fill: #1f77b4;
-  fill-opacity: .1;
-  stroke: steelblue;
+  /*fill: #1f77b4;*/
+  /*fill-opacity: .2;*/
+  /*stroke: steelblue;*/
 }
 
 circle.parent:hover {
-  stroke: #ff7f0e;
-  stroke-width: .5px;
+  /*stroke: #ff7f0e;
+  stroke-width: .5px;*/
 }
 
 circle.child {
-  pointer-events: none;
+  /*pointer-events: none;*/
 }
 
