tool-tip styling. fixed zooming bug. turned off path animation

--- a/style.css
+++ b/style.css
@@ -70,8 +70,5 @@ div#info {
     width: 600px;
     height: 750px;
     float:right;
-    /*top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;*/
+    display: none;
 }
