--- a/tool-tip.css
+++ b/tool-tip.css
@@ -6,6 +6,8 @@
   color: #fff;
   border-radius: 2px;
   pointer-events: none;
+  text-align:center;
+  margin-top:-8px;
 }
 
 /* Creates a small triangle extender for the tooltip */
