--- a/app/stylesheets/bubble.css
+++ b/app/stylesheets/bubble.css
@@ -30,6 +30,13 @@ circle:hover {
 
 svg.bubble-chart {
   background-color: #FFFFFF;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 circle.highlighted {
