styled close button of editor. adjusted height of editor via js. open editor via dropdown menue in nav bar

--- a/app/stylesheets/bubble.css
+++ b/app/stylesheets/bubble.css
@@ -30,7 +30,7 @@ circle:hover {
 
 svg.bubble-chart {
   background-color: #FFFFFF;
-
+  opacity:0;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
