--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -1,6 +1,9 @@
+html,body {
+    height:100%;
+}
 
 body {
-  height: 100vh;
+  /*height: 100vh;*/
   position: relative;
   display: flex;
   flex-direction: column;
@@ -24,9 +27,11 @@ body {
 
 #side-bar {
   position:absolute;
-  right: 30px;
-  top: 30px;
+  right: 5px;
+  top: 5px;
   text-align:left;
+  display:none;
+  z-index:0;
 }
 
 #side-bar .side-bar-button {
@@ -36,18 +41,33 @@ body {
 }
 
 .editor-wrapper {
-  background-color: #636363;
-  border-radius: 4px;
-  padding: 4px;
+  /*background-color: #636363;*/
+  /*border-radius: 4px;*/
+  /*padding: 4px;*/
   width: 440px;
   max-width: 75vw;
   height: 75vh;
   max-height: 100%;
   left:0 !important;
   
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.16),0 4px 12px 0 rgba(0,0,0,0.12);
+  /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.16),0 4px 12px 0 rgba(0,0,0,0.12);*/
   position:relative;
 }
+
+.editor-wrapper .close-editor-button {
+  background-color: #636363;
+  color: #E2E2E2;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-bottom: -5px;
+  padding: 5px 20px;
+}
+
+
+.editor-wrapper .close-editor-button:hover {
+  color: #FFFFFF;
+}
+
 
 .editor-wrapper #handle {
   position: absolute;
@@ -55,6 +75,7 @@ body {
   bottom:0;
   left: 0;
   margin-left: 3px;
+  margin-bottom:-27px;
   width: auto;
   height: auto;
   font-size: 14px !important;
@@ -65,6 +86,9 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 2px;
+  border: 5px solid #636363;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.16),0 4px 12px 0 rgba(0,0,0,0.12);
   /*text-align:left;
   width: 440px;
   max-width: 75vw;
